Add additional CRUDs for several routes
